--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "axios": "^1.7.2",
     "canvas": "^2.11.2",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "fs": "^0.0.1-security",
     "mongoose": "^8.4.1",
     "sharp": "^0.33.4"
